# distpca

./: CMakeLists.txt  Dockerfile  Makefile  dist_pca.c  dist_svd.c  distpca.h  gen_svd.c  gen_svd_cases.py  lazy_compile.sh  lazy_test.sh  pca_ref.py  proto_pca.c  sanity.sh  svd_algs.c  svd_algs.h  svd_utils.c  svd_utils.h  test.py  test_pca.py  test_pca_fmi.py  test_pca_mpi.py  test_svd_aws.py  test_svd_cases.py  test_svd_cases_fmi.py  test_svd_fmi.py  todo.txt  utils.c  utils.h
aws_tests/: CMakeLists.txt  Dockerfile  commands.txt
aws_tests/references/: reference_example.cpp
fmi/config/: fmi_test.json
fmi_svd_bench/: CMakeLists.txt  arn.txt  deployment.sh  fmi_svd_bench.cpp
fmi_svd_bench/inc/: svd_utils.h
fmi_svd_bench/src/: dist_svd.cpp  fmi_pca.cpp  fmi_wrapper.cpp  mmio.cpp  svd_algs_fmi.cpp  svd_utils.cpp
inc/: svd_algs_fmi.h  utils.h
src/: dist_pca.c  dist_svd.c  fmi_pca.cpp  fmi_svd.cpp  fmi_svd_bench.cpp  gen_svd.c  mmio_dense.c  proto_pca.c  svd_algs.c  svd_algs_fmi.cpp  svd_utils.c  utils.c  utils.cpp
